[tool.poetry]
name = "azqueuetweeter"
version = "0.1.0"
description = "Tweet from Azure Storage Queues"
authors = ["Jay Miller <kjaymiller@gmail.com>", "Pamela Fox <pamela.fox@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.14"
azure-storage-queue = "^12.4.0"
tweepy = "^4.10.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^3.0.0"
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
mypy = "^0.971"
tox = "^3.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = [
    "tests"
]
pythonpath = ['src']


# content of: tox.ini , put in same dir as setup.py
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = python3.8,python3.9,python3.10
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
    pytest-mock
commands = pytest --cov src/azqueuetweeter tests/

[tox:.package]
basepython = python3
"""
